# vi_mapper

./: CMakeLists.txt  calibration_camera_0(RIGHT).txt  calibration_camera_0.txt  calibration_camera_1(LEFT).txt  calibration_camera_1.txt  package.xml
cmake_modules/: FindEigen3.cmake  FindG2O.cmake
mocking/: landmarks_clean_level2.txt  landmarks_noise.txt  landmarks_nonoise.txt  landmarks_partialnoise.txt
scripts/: bagit.sh
src/analysis/: stereo_detector_alberto_node.cpp  stereo_detector_node.cpp
src/configuration/: CConfigurationCamera.cpp  CConfigurationCamera.h  CConfigurationCameraKITTI.cpp  CConfigurationCameraKITTI.h  CConfigurationOpenCV.h  CConfigurationStereoCamera.h  Types.h
src/configuration/deprecated/: CConfigurationStereoCamera.h
src/core/: CDetectorMonoTilewise.cpp  CDetectorMonoTilewise.h  CEpipolarDetector.cpp  CEpipolarDetector.h  CEpipolarDetectorBRIEF.cpp  CEpipolarDetectorBRIEF.h  CFundamentalMatcher.cpp  CFundamentalMatcher.h  CMatcherEpipolar.cpp  CMatcherEpipolar.h  CMockedMatcherEpipolar.cpp  CMockedMatcherEpipolar.h  CMockedTrackerStereo.cpp  CMockedTrackerStereo.h  CNaiveStereoDetector.cpp  CNaiveStereoDetector.h  CStereoDetector.cpp  CStereoDetector.h  CTrackerStereo.cpp  CTrackerStereo.h  CTrackerStereoMotionModel.cpp  CTrackerStereoMotionModel.h  CTrackerStereoMotionModelKITTI.cpp  CTrackerStereoMotionModelKITTI.h  CTriangulator.cpp  CTriangulator.h
src/core/deprecated/: CDetectorTestStereoDepth.cpp  CDetectorTestStereoDepth.h  CEpipolarDetector.cpp  CEpipolarDetector.h  CEpipolarDetectorBRIEF.cpp  CEpipolarDetectorBRIEF.h  CNaiveStereoDetector.cpp  CNaiveStereoDetector.h  CStereoDetector.cpp  CStereoDetector.h  CTrackerStereoMotionModel.cpp  CTrackerStereoMotionModel.h
src/exceptions/: CExceptionDetectionFailed.h  CExceptionEndOfFile.h  CExceptionEpipolarLine.h  CExceptionInvalidFile.h  CExceptionLogfileTree.h  CExceptionNoMatchFound.h  CExceptionNoMatchFoundInternal.h  CExceptionPoseOptimization.h
src/gui/: CViewerCloud.cpp  CViewerCloud.h  CViewerScene.cpp  CViewerScene.h
src/localization/: tf_publisher_node.cpp
src/main/: stereo_detector_alberto_node.cpp  stereo_detector_node.cpp
src/optimization/: CBridgeG2O.cpp  CBridgeG2O.h  CPositSolver.h  CPositSolverStereo.h  Cg2oOptimizer.cpp  Cg2oOptimizer.h  closure_buffer.cpp  closure_checker.cpp
src/optimization/deprecated/: CBridgeG2O.cpp  CPositSolver.h  CPositSolverProjection.h  closure_checker.h
src/parallelization/: CThreadGUI.h
src/runnable/: compute_rotation_icp.cpp  evaluate_trajectory.cpp  interpolate_trajectory.cpp  republisher_kitti.cpp  republisher_node.cpp  republisher_node_kitti.cpp  stereo_detector_alberto_node.cpp  stereo_detector_blocking_node.cpp  stereo_detector_free.cpp  stereo_detector_mocked.cpp  stereo_fps.cpp  stereo_fps_kitti.cpp  stereo_free.cpp  stereo_parallel.cpp  stereo_single.cpp  test_cloud_matching.cpp  test_depth.cpp
src/streaming/: create_trajectory_kitti.cpp  message_dumper_node.cpp  vi_message_dumper_node_sync.cpp
src/types/: C67DTree.cpp  C67DTree.h  CIMUInterpolator.h  CKeyFrame.cpp  CKeyFrame.h  CLandmark.cpp  CLandmark.h  Typedefs.h  Types.h  TypesCloud.h  TypesMocked.h
src/utility/: CBridgeG2O.cpp  CBridgeG2O.h  CCloudMatcher.h  CCloudStreamer.h  CIMUInterpolator.cpp  CIMUInterpolator.h  CLogger.cpp  CLogger.h  CMiniTimer.h  CMiniVisionToolbox.cpp  CMiniVisionToolbox.h  CNaiveStereoDetector.cpp  CNaiveStereoDetector.h  CPinholeCamera.h  CPositSolver.h  CSimpleFeatureDetector.h  CStack.h  CStereoCamera.h  CWrapperOpenCV.h
src/utility/deprecated/: CCloudStreamer.h  CMessageSynchronizer.h
src/vision/: CMiniVisionToolbox.cpp  CMiniVisionToolbox.h  CMockedStereoCamera.h  CPinholeCamera.h  CStereoCamera.h  ORBVocabulary.h  ORBmatcher.cc
