<?xml version="1.0"?>
<package>
    <name>vi_mapper</name>
    <version>1.0.0</version>
    <description>visual-inertial mapping for bike use</description>
    <author>Dominik Schlegel</author>
    <maintainer email="schdomin@gmail.com">Dominik Schlegel</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>fps_mapper</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>genmsg</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>fps_mapper</run_depend>

</package>
